--- a/pom.xml
+++ b/pom.xml
@@ -257,11 +257,11 @@ Version $Id: pom.xml,v 1.8 2009/02/20 15:21:28 michiel Exp $
           <bottom>${project.name} ${project.version} - ${javadoctimestamp}</bottom>
           <show>package</show>
           <links>
-            <link>http://download.oracle.com/javase/7/docs/api/</link>
-            <link>http://java.sun.com/javaee/5/docs/api/</link>
-            <link>http://java.sun.com/products/jsp/jstl/1.1/docs/api/</link>
-            <link>http://logging.apache.org/log4j/docs/api/</link>
-            <link>http://commons.apache.org/fileupload/apidocs/</link>
+            <link>https://download.oracle.com/javase/7/docs/api/</link>
+            <link>https:/docs.oracle.com/javaee/5/api</link>
+            <link>https://docs.oracle.com/cd/E17802_01/products/products/jsp/jstl/1.1/docs/api/</link>
+            <link>https://logging.apache.org/log4j/1.2/apidocs/</link>
+            <link>https://commons.apache.org/proper/commons-fileupload/apidocs/</link>
             <link>http://lucene.apache.org/java/3_4_0/api/all/</link>
           </links>
           <groups>
@@ -373,6 +373,7 @@ Version $Id: pom.xml,v 1.8 2009/02/20 15:21:28 michiel Exp $
             </tag>
 
           </tags>
+          <additionalparam>-Xdoclint:none</additionalparam>
         </configuration>
       </plugin>
       <plugin>
