--- a/maven-base/pom.xml
+++ b/maven-base/pom.xml
@@ -19,7 +19,6 @@ See http://www.MMBase.org/license
  </parent>
 
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.mmbase</groupId>
   <artifactId>mmbase-parent</artifactId>
   <packaging>pom</packaging>
   <name>MMBase</name>
@@ -250,7 +249,7 @@ See http://www.MMBase.org/license
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-javadoc-plugin</artifactId>
-          <version>2.6</version>
+          <version>3.3.1</version>
           <configuration>
             <attach>true</attach>
             <quiet>false</quiet>
@@ -258,12 +257,12 @@ See http://www.MMBase.org/license
             <quiet>true</quiet>
             <show>package</show>
             <links>
-              <link>http://download.oracle.com/javase/1.5.0/docs/api/</link>
-              <link>http://download.oracle.com/javaee/5/api/</link>
-              <link>http://www.mmbase.org/api/</link>
+              <link>https://docs.oracle.com/javase/1.5.0/docs/api/</link>
+              <link>https://docs.oracle.com/javaee/5/api/</link>
+              <link>https://www.mmbase.org/api/</link>
             </links>
-            <source>1.5</source>
-
+            <source>1.8</source>
+            <doclint>none</doclint>
           </configuration>
         </plugin>
 
