--- a/maven-base/applications/pom.xml
+++ b/maven-base/applications/pom.xml
@@ -23,7 +23,7 @@
     <dependency>
       <groupId>org.mmbase</groupId>
       <artifactId>mmbase</artifactId>
-      <version>${mmbase.version}</version>
+      <version>${project.version}</version>
       <scope>provided</scope>
     </dependency>
 
