--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,5 +32,5 @@ jobs:
           only-summary: 'true'
           fail-on-error: 'false'
       - uses: codecov/codecov-action@v2
-        if: github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/MMBase-1_9'
 
