--- a/core/pom.xml
+++ b/core/pom.xml
@@ -117,6 +117,14 @@ See http://www.MMBase.org/license
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>6</source>
+          <target>6</target>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
   <dependencies>
