serverid is just ossrh?

--- a/pom.xml
+++ b/pom.xml
@@ -549,11 +549,11 @@ Version $Id: pom.xml,v 1.8 2009/02/20 15:21:28 michiel Exp $
 
   <distributionManagement>
     <snapshotRepository>
-      <id>mmbase-ossrh</id>
+      <id>ossrh</id>
       <url>https://oss.sonatype.org/content/repositories/snapshots</url>
     </snapshotRepository>
     <repository>
-      <id>mmbase-ossrh-release</id>
+      <id>ossrh</id>
       <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
     </repository>
   </distributionManagement>
