--- a/applications/pom.xml
+++ b/applications/pom.xml
@@ -186,11 +186,11 @@
 
   <distributionManagement>
     <snapshotRepository>
-      <id>mmbase-ossrh</id>
+      <id>ossrh</id>
       <url>https://oss.sonatype.org/content/repositories/snapshots</url>
     </snapshotRepository>
     <repository>
-      <id>mmbase-ossrh-release</id>
+      <id>ossrh</id>
       <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
     </repository>
   </distributionManagement>
