Fixing test cases.

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -24,6 +24,7 @@ See http://www.MMBase.org/license
     <groupId>org.mmbase</groupId>
     <artifactId>mmbase-parent</artifactId>
     <version>1.9-SNAPSHOT</version>
+    <relativePath>../maven-base</relativePath>
   </parent>
 
   <artifactId>mmbase</artifactId>
