added some things to .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ applications/streams/samples/
 /example-webapp/data/
 /applications/searchrelate/out/
 /applications/streams/samplesnot/
+/applications/share/xalan-j_2_7_2/
+/applications/vpro-wizards/out/
+/applications/cloudcontext/out/
