--- a/example-webapp/pom.xml
+++ b/example-webapp/pom.xml
@@ -31,7 +31,7 @@
     <defaultGoal>install</defaultGoal>
     <plugins>
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
+        <groupId>org.apache.tomcat.maven</groupId>
         <artifactId>tomcat-maven-plugin</artifactId>
         <version>2.2</version>
         <configuration>
