--- a/pom.xml
+++ b/pom.xml
@@ -684,8 +684,37 @@ Version $Id: pom.xml,v 1.8 2009/02/20 15:21:28 michiel Exp $
       </dependencies>
 
     </profile>
-
-
+    <profile>
+      <id>deploy</id>
+      <build>
+        <plugins>
+         <plugin>
+           <groupId>org.sonatype.plugins</groupId>
+             <artifactId>nexus-staging-maven-plugin</artifactId>
+           <version>1.7.0</version>
+           <extensions>true</extensions>
+           <configuration>
+             <serverId>ossrh</serverId>
+               <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                 <autoReleaseAfterClose>true</autoReleaseAfterClose>
+           </configuration>
+         </plugin>
+        <plugin>
+          <artifactId>maven-gpg-plugin</artifactId>
+          <version>3.2.7</version>
+          <executions>
+            <execution>
+              <id>sign-artifacts</id>
+              <phase>verify</phase>
+              <goals>
+                  <goal>sign</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+        </plugins>
+      </build>
+    </profile>
   </profiles>
 
 </project>
