--- a/contributions/lucene/pom.xml
+++ b/contributions/lucene/pom.xml
@@ -5,6 +5,7 @@
     <groupId>org.mmbase</groupId>
     <artifactId>mmbase-application-parent</artifactId>
     <version>1.9-SNAPSHOT</version>
+    <relativePath>../../maven-base/applications/pom.xml</relativePath>
   </parent>
 
   <artifactId>mmbase-lucene</artifactId>
